# termProject

./: .gitignore  .gitmodules  LICENSE  README.md
apresentacao1/: apresentacao.tex  referencias.bib
apresentacao1/slides/: biomas.tex  introducao.tex  mapasAltura.tex  metodologia.tex  objetivos.tex  perlinNoise.tex  problematica.tex  regioes.tex  roteiro.tex
logbook/: TO-DO.txt  logbook.txt  todoList.md
monograph1/: main-tcc.tex  mdtuffs.cls
monograph1/capitulos/: introducao.tex  metodologia.tex  objetivos.tex  projeto.tex  revisaobibliografica.tex  trabalhosrelacionados.tex
monograph1/macros/: bugcaption.tex
monograph1/referencias/: referencias.bib
ptg/cpp/: CMakeLists.txt
ptg/cpp/lib/mylib/: BiomeDescription.hpp  TerrainChunck.hpp  TerrainChunk.hpp  TerrainGen.hpp  VertexDescription.hpp  camera.hpp  ptg.hpp  shader.hpp
ptg/cpp/lib/myshader/: camera.h  shader.h
ptg/cpp/src/: camera.cpp  main.c  main.cpp  shader.cpp  shader33Vertex.vs
ptg/cpp/src/shader/: terrain.fs
wProject1/apresentacao1/: beamerthemeUFFS.sty
wProject1/apresentacao1/slides/: biomas.tex  metodologia.tex  perlinNoise.tex
wProject1/monograph1/: Makefile  abnt.bst  brazilian.babel  english.babel  main-tcc.tex
wProject1/monograph1/capitulos/: metodologia.tex  revisaobibliografica.tex
wProject2/: .gitignore
wProject2/apresentacao2/: apresentacao.tex  referencias.bib
wProject2/apresentacao2/slides/: biomas.tex  conclusao.tex  fronteiras.tex  introducao.tex  mapasAltura.tex  regioes.tex
wProject2/monograph2/: main-tcc.aux  main-tcc.bbl  main-tcc.blg  main-tcc.d  main-tcc.lof  main-tcc.out  main-tcc.tex  main-tcc.toc  mdtuffs.cls
wProject2/monograph2/capitulos/: conclusao.tex  implementacao.tex  introducao.tex  metodologia.tex  resultados.tex  revisaobibliografica.tex
wProject2/monograph2/figuras/: uffs.eps
wProject2/monograph2/referencias/: referencias.bib
